Added blade extensions for '@loop_product()'

--- a/workbench/shopavel/products/composer.json
+++ b/workbench/shopavel/products/composer.json
@@ -17,7 +17,8 @@
         ],
         "psr-0": {
             "Shopavel\\Products": "src/"
-        }
+        },
+        "files": ["src/helpers.php"]
     },
     "minimum-stability": "dev"
 }
