Added categories controller, routes and model

--- a/workbench/shopavel/categories/composer.json
+++ b/workbench/shopavel/categories/composer.json
@@ -17,7 +17,8 @@
         ],
         "psr-0": {
             "Shopavel\\Categories": "src/"
-        }
+        },
+        "files": ["src/helpers.php"]
     },
     "minimum-stability": "dev"
 }
