Making loop handlers more generic

--- a/workbench/shopavel/loops/composer.json
+++ b/workbench/shopavel/loops/composer.json
@@ -14,7 +14,8 @@
     "autoload": {
         "psr-0": {
             "Shopavel\\Loops": "src/"
-        }
+        },
+        "files": ["src/helpers.php"]
     },
     "minimum-stability": "dev"
 }
