--- a/workbench/shopavel/loops/composer.json
+++ b/workbench/shopavel/loops/composer.json
@@ -9,7 +9,12 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.0.x"
+        "illuminate/support": "~4"
+    },
+    "require-dev": {
+        "illuminate/container": "~4",
+        "illuminate/database": "~4",
+        "mockery/mockery": "dev-master"
     },
     "autoload": {
         "psr-0": {
